AX: WebKit does not recognize ARIA 1.1 tables https://bugs.webkit.org/show_bug.cgi?id=133163

Reviewed by Darin Adler.

The AXObjectCache code that determines which object to create based on the role needs to be token fallback aware.

Test: accessibility/table-fallback-roles-expose-element-attributes.html

* accessibility/AXObjectCache.cpp:
(WebCore::nodeHasRole):



Canonical link: https://commits.webkit.org/151378@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@169427 268f45cc-cd09-0410-ab3c-d52691b4dbfc