Source/WebCore/accessibility/AXObjectCache.cpp
@@ -254,7 +254,13 @@ bool nodeHasRole(Node* node, const String& role)
     if (!node || !node->isElementNode())
         return false;
 
-    return equalIgnoringCase(toElement(node)->fastGetAttribute(roleAttr), role);
+    auto& roleValue = toElement(node)->fastGetAttribute(roleAttr);
+    if (role.isNull())
+        return roleValue.isEmpty();
+    if (roleValue.isEmpty())
+        return false;
+
+    return SpaceSplitString(roleValue, true).contains(role);
 }
 
 static PassRefPtr<AccessibilityObject> createFromRenderer(RenderObject* renderer)
